test/visibility/rename/renameModuleViaOnly.good
renameModuleViaOnly.chpl:6: In function 'main':
renameModuleViaOnly.chpl:7: error: Bad identifier in rename, no known 'Toolbox' in 'Toolbox'
